jabgui/src/main/resources/org/jabref/gui/jabref-javafx.css
/* ... */
/* JavaFX TabPane */
.tab-pane {
    -fx-open-tab-animation: NONE;
    -fx-close-tab-animation: NONE;
}

.tab-pane > .tab-header-area > .headers-region > .tab {
    -fx-background-insets: 0;
    -fx-background-radius: 0;
    -fx-background-color: -jr-background-alt;
    -fx-border-color: -fx-outer-border;
    -fx-border-width: 0.5 0.5 0.5 0.5;
    -fx-padding: 0.3em 0.9em 0.3em 0.9em;
    -fx-pref-height: 3em;
}

.tab-pane > .tab-header-area > .headers-region > .tab .tab-label {
    -fx-text-fill: -fx-mid-text-color;
}

.tab-pane > .tab-header-area > .headers-region > .control-buttons-tab {
    -fx-border-color: -jr-theme;
    -fx-fill: -jr-theme;
    -fx-text-fill: -jr-theme;
}

.tab-pane > .tab-header-area > .headers-region > .tab:selected {
    -fx-background-color: -fx-control-inner-background;
    -fx-border-color: -jr-theme;
    -fx-border-width: 3 0 0 0;
}

.tab-pane > .tab-header-area > .headers-region > .tab:selected .tab-label {
    -fx-fill: -jr-theme;
    -fx-text-fill: -jr-theme;
}

.tab-pane > .tab-header-area > .headers-region > .tab:selected .tab-close-button {
    -fx-background-color: -jr-theme;
}

.tab-pane > .tab-header-area > .headers-region > .tab:selected .glyph-icon {
    -fx-fill: -fx-mid-text-color;
    -fx-text-fill: -fx-mid-text-color;
}

.tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
    -fx-border-width: 0;
    -fx-border-insets: 0;
    -fx-border-radius: 0;
}

.tab-pane > .tab-header-area > .headers-region > .tab.drop {
    -fx-border-color: -jr-drag-target;
    -fx-background-color: -jr-drag-target-hover;
    -fx-border-width: 3 1 1 1;
}

.tab-pane > .tab-header-area > .headers-region > .tab.drop .tab-label {
    -fx-fill: -jr-drag-target;
    -fx-text-fill: -jr-drag-target;
}

.tab-pane > .tab-header-area > .tab-header-background {
    -fx-background-color: -jr-background-alt;
}

.tab-pane > .tab-header-area > .headers-region > .tab .glyph-icon {
    -glyph-size: 0.812em;
    -fx-fill: -fx-mid-text-color;
    -fx-text-fill: -fx-mid-text-color;
}

.tab-pane > .tab-header-area > .headers-region > .tab:selected .glyph-icon {
    -fx-fill: -jr-theme;
    -fx-text-fill: -jr-theme;
}

.tab-pane > .tab-header-area {
    -fx-padding: 0 0 0 0;
}

.tab-pane.hide-tab-bar > .tab-header-area {
    -fx-min-height: 0;
    -fx-max-height: 0;
    -fx-pref-height: 0;
    -fx-padding: 0;
}

/* JavaFX SplitPane */
.split-pane > .split-pane-divider {
    -fx-background-color: -jr-sidepane-background;
    -fx-padding: 0 .5 0 .5;
}

/* JavaFX ComboBoxBase / ComboBox / DatePicker */
.combo-box-base {
    -fx-background-color: -fx-outer-border, -fx-control-inner-background;
    -fx-background-insets: 0, 1;
    -fx-background-radius: 0, 0;
}

.combo-box > .list-cell {
    -fx-background-color: -fx-outer-border, -fx-control-inner-background;
    -fx-background-insets: 0, 1 0 1 1;
    -fx-text-fill: -fx-text-base-color;
}

.combo-box-popup > .list-view {
    -fx-background-color: -fx-control-inner-background;
    -fx-background-insets: 0;
    -fx-effect: null;
    -fx-border-width: 1;
    -fx-border-color: -fx-outer-border;
    -fx-padding: 0;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell {
    -fx-padding: 4 0 4 5;
    /* No alternate highlighting */
    -fx-background: -fx-control-inner-background;
}

.combo-box-popup > .list-view > .placeholder > .label {
    -fx-text-fill: -fx-text-base-color;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:hover {
    -fx-background: -fx-selection-bar;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected,
.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected:hover {
    -fx-background: -fx-selection-bar;
}


.combo-box-base:editable > .text-field,
.date-picker > .text-field {
    -fx-background-color: -fx-outer-border, -fx-control-inner-background;
    -fx-background-insets: 0, 1;
    -fx-background-radius: 0;
}

.combo-box-base:editable:focused > .text-field,
.combo-box-base:editable > .text-field:focused,
.date-picker > .text-field:focused {
    -fx-background-color: -jr-accent, -fx-control-inner-background;
    -fx-background-insets: 0, 2;
    -fx-background-radius: 0;
}

.date-picker:focused > .text-field {
    -fx-background-color: -fx-control-inner-background;
    -fx-background-insets: 0;
}

.date-picker-popup > * > .spinner > .button > .left-arrow,
.date-picker-popup > * > .spinner > .button > .right-arrow {
    -fx-background: -jr-accent;
    -fx-background-color: -fx-background;
}

/* JavaFX Accordion / TitledPane */

.accordion .titled-pane {
    -fx-skin: "org.jabref.gui.util.CustomTitledPaneSkin";
    -fx-arrow-side: right;
}

.accordion .titled-pane .title {
    -fx-background-color: transparent;
    -fx-border-color: transparent;
    -fx-background-insets: 5 5 5 5;
}

.accordion .titled-pane > *.content {
    -fx-background-color: transparent;
    -fx-border-color: transparent;
}

/*
 * The arrow button has some right padding that's added
 * by "modena.css". This simply puts the padding on the
 * left since the arrow is positioned on the right.
 */
.titled-pane > .title > .arrow-button {
    -fx-padding: 0.0em 0.0em 0.0em 0.583em;
}

/* JavaFX ScrollBar / ScrollPane */
.scroll-bar {
    -fx-background-color: transparent;
    -fx-opacity: 0.3;
}

.scroll-bar:horizontal .track,
.scroll-bar:vertical .track {
    -fx-background-color: -jr-scrollbar-track;
    -fx-opacity: 0.6;
    -fx-background-radius: 0em;
}


.scroll-bar:horizontal .thumb,
.scroll-bar:vertical .thumb {
    -fx-background-color: -jr-scrollbar-thumb;
    -fx-background-insets: 0, 0, 0;
    -fx-background-radius: 0em;
}

.scroll-bar .thumb:hover,
.scroll-bar .thumb:pressed {
    -fx-background-color: derive(-jr-scrollbar-thumb, -30%);
}
/* ... */

